# demo-packager

./: .gitignore  CMakeLists.txt  README.md  pom.xml
scripts/: run.bat  run.sh
src/izpack/: app.template.properties  appinfo.properties  install.xml
src/main/java/com/csg/demo/: DemoApp.java
src/main/resources/: log4j2.xml
